feat: add russian alphabet

--- a/src/l10n/ru.yml
+++ b/src/l10n/ru.yml
@@ -1,4 +1,4 @@
-airport_charlist: abcdefghijklmnopqrstuvwxyz0123456789 _*%!?#/\\|@
+airport_charlist: абвгдеёжзийклмнопрстуфхцчшщъыьэюя0123456789 _*%!?#/\\|@
 attribution: от <a href="https://twitter.com/mxwllt"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-maxwellito"></use></svg></a> / на <a href="https://github.com/maxwellito/breaklock"><svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-github"></use></svg></a>
 button_abort: ОТМЕНА
 button_easy: ЛЕГКИЙ
