--- a/src/l10n/en.yml
+++ b/src/l10n/en.yml
@@ -44,7 +44,7 @@ quote_success13: You must hate this game by now.
 quote_success14: I hope you didn\'t cheat.
 quote_success15: Your dedication is impressive.
 quote_success16: Logic not found.
-quote_success17: No comment
+quote_success17: No comment.
 quote_fail00: I believe there\'s some work to do.
 quote_fail01: Do you understand the game? Don\'t take it personnaly, I struggle to explain it.
 quote_fail02: One day you will make it...
@@ -52,10 +52,11 @@ quote_fail03: It\'s not funny for you, but it is for me ;)
 quote_fail04: Don\'t stress, you will make it.
 quote_fail05: If you want to avoid battles, stay out of the grassy areas!
 quote_fail06: Even if you loose in battle, if you surpass what you\'ve done before, you have bested yourself.
-quote_fail07: TILT! Insert coin and try again
+quote_fail07: TILT! Insert coin and try again.
 special_css: <style></style>
 summary_see: Please select an option.
 summary_action_solution: SOLUTION
 summary_action_new_game: NEW_GAME
 summary_action_back_home: BACK_HOME
 tweet_feedback: Tweet me your feedback at
+share: Share
