--- a/src/l10n/fa.yml
+++ b/src/l10n/fa.yml
@@ -59,3 +59,4 @@ summary_action_solution: راه حل
 summary_action_new_game: بازی جدید
 summary_action_back_home: بازگشت به خانه
 tweet_feedback: بازخوردت رو توییت کن برای
+share: اشتراک گذاری
