--- a/src/l10n/ru.yml
+++ b/src/l10n/ru.yml
@@ -59,3 +59,4 @@ summary_action_solution: РЕШЕНИЕ
 summary_action_new_game: НОВАЯ_ИГРА
 summary_action_back_home: НАЗАД_НА_ГЛАВНУЮ
 tweet_feedback: Твитните мне свой отзыв по игре.
+share: делиться
